with_phppgadmin/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: postgres
  name: phppgadmin
spec:
  tls:
    termination: edge
  to:
    kind: Service
    name: phppgadmin
